kubernetes/mariadb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      nodeSelector:
        kubernetes.io/hostname: node_1
        
      containers:
        - name: mariadb
          image: mariadb:11.4
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 3306

          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi

          volumeMounts:
            - name: mariadb-data
              mountPath: /var/lib/mysql

      volumes:
        - name: mariadb-data
          hostPath:
            path: /path/to/mariadb/akaunting
            type: DirectoryOrCreate

---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
spec:
  selector:
    app: mariadb
  ports:
    - port: 3306
      targetPort: 3306
