kubernetes/akaunting.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: akaunting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: akaunting
  template:
    metadata:
      labels:
        app: akaunting
    spec:
      nodeSelector:
        kubernetes.io/hostname: node_1
        
      containers:

# Akaunting container
      - name: akaunting
        image: ghcr.io/akaunting/docker/akaunting:latest
        volumeMounts:
        - name: storage
          mountPath: /var/www/html/storage

# Worker container
      - name: akaunting-worker
        image: ghcr.io/akaunting/docker/akaunting:latest
        args:
        - --queue-worker
        volumeMounts:
        - name: storage
          mountPath: /var/www/html/storage
     
      volumes: 
      - name: storage
        hostPath:
          path: /path/to/akaunting-data/storage
          type: DirectoryOrCreate

---

apiVersion: v1
kind: Service
metadata:
  name: akaunting
spec:
  selector:
    app: akaunting
  ports:
  - port: 80
    targetPort: 80

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: akaunting
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`akaunting.mydomain.com`)
    kind: Rule
    services:
    - name: akaunting
      port: 80
